# polystring

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/polystring/: __init__.py  _analyzer.py  _detector.py  _exceptions.py  _models.py  _ngram.py
src/polystring/_pipeline/: stage1_preprocess.py  stage2_script.py  stage3_classify.py  stage4_context.py  stage5_merge.py
src/polystring/data/: _background_ngram.json  sw_ngram.json  tl_ngram.json  ur_Latn_ngram.json
src/polystring/lexicons/: __init__.py  french.py  german.py  italian.py  portuguese.py  roman_urdu.py  spanish.py  swahili.py  tagalog.py  turkish.py
tests/: test_analyzer.py  test_context_correction.py  test_lexicons.py  test_ngram.py  test_preprocessing.py  test_real_world.py  test_script_detection.py  test_span_merging.py
tests/fixtures/: mixed_text_samples.json
